--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>HTML Assignment #3</h1>
-	<table id="table-1">
+	<table id="table-1" class="middle">
 		<tr>
 			<td id="t11">left</td>
 			<td id="t12" class="center">center</td>
@@ -26,7 +26,7 @@
 			<td class="right">right</td>
 		</tr>
 	</table>
-	<table id="table-2">
+	<table id="table-2" class="middle">
 		<tr>
 			<td id="t21" colspan="6"></td>
 		</tr>
@@ -58,9 +58,9 @@
 			<td colspan="6"></td>
 		</tr>
 	</table>
-	<table id="table-3">
+	<table id="table-3" class="middle">
 		<tr>
-			<td colspan="3"></td>
+			<td  class="green" colspan="3"></td>
 		</tr>
 		<tr>
 			<td></td>
@@ -69,7 +69,7 @@
 			</td>
 			<td></td>
 		<tr>
-			<td colspan="3"></td>
+			<td class="blue" colspan="3"></td>
 		</tr>
 	</table>
     <script type="text/javascript" src="./script.js">
